--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunny Side Agency</title>
-    <link rel="stylesheet" href="/Assets/Css/main.css">
-    <link rel="icon" href="/Assets/Images/favicon-32x32.png">
+    <link rel="stylesheet" href="Assets/Css/main.css">
+    <link rel="icon" href="Assets/Images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;800&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
                                 <a href="#" class="contact">CONTACT</a>
                             </li>
                             <li id="ham" class="item item-5 mobile">
-                                <img src="/Assets/Images/icon-hamburger.svg" alt="">
+                                <img src="Assets/Images/icon-hamburger.svg" alt="">
                             </li>
                         </ul>
                     </div>
@@ -62,7 +62,7 @@
                 <section class="hero">
                     <h1 class="main-title">WE ARE CREATIVES</h1>
                     <div class="arr-wrapper">
-                        <img class="arrow" src="/Assets/Images/icon-arrow-down.svg" alt="An arrow pointing down">
+                        <img class="arrow" src="Assets/Images/icon-arrow-down.svg" alt="An arrow pointing down">
                     </div>
                 </section>
         </header>
@@ -104,19 +104,19 @@
             <h5 class="sixth-title">CLIENT TESTIMONIALS</h5>
             <div class="testimonials-wrapper">
                 <div class="testimonial testimonial-1">
-                    <img class="client-img" src="/Assets/Images/image-emily.jpg" alt="An image of a client">
+                    <img class="client-img" src="Assets/Images/image-emily.jpg" alt="An image of a client">
                     <p class="test-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
                     <p class="client-name">Emily R.</p>
                     <p class="occupation">Marketing Director</p>
                 </div>
                 <div class="testimonial testimonial-2">
-                    <img class="client-img" src="/Assets/Images/image-thomas.jpg" alt="An image of a client">
+                    <img class="client-img" src="Assets/Images/image-thomas.jpg" alt="An image of a client">
                     <p class="test-text">Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</p>
                     <p class="client-name">Thomas S.</p>
                     <p class="occupation">Chief Operating Officer</p>
                 </div>
                 <div class="testimonial testimonial-3">
-                    <img class="client-img" src="/Assets/Images/image-jennie.jpg" alt="An image of a client">
+                    <img class="client-img" src="Assets/Images/image-jennie.jpg" alt="An image of a client">
                     <p class="test-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
                     <p class="client-name">Jennie F.</p>
                     <p class="occupation">Business Owner</p>
@@ -126,16 +126,16 @@
 
         <section class="main-gallery">
             <div class="gallery-item">
-                <img src="/Assets/Images/Desktop/image-gallery-milkbottles.jpg" alt="Milk bottles">
+                <img src="Assets/Images/Desktop/image-gallery-milkbottles.jpg" alt="Milk bottles">
             </div>
             <div class="gallery-item">
-                <img src="/Assets/Images/Desktop/image-gallery-orange.jpg" alt="Top view of an orange on a white plate">
+                <img src="Assets/Images/Desktop/image-gallery-orange.jpg" alt="Top view of an orange on a white plate">
             </div>
             <div class="gallery-item">
-                <img src="/Assets/Images/Desktop/image-gallery-cone.jpg" alt="A camera shot of a cone">
+                <img src="Assets/Images/Desktop/image-gallery-cone.jpg" alt="A camera shot of a cone">
             </div>
             <div class="gallery-item">
-                <img src="/Assets/Images/Desktop/image-gallery-sugarcubes.jpg" alt="Sugar cubes stacked on each other">
+                <img src="Assets/Images/Desktop/image-gallery-sugarcubes.jpg" alt="Sugar cubes stacked on each other">
             </div>
         </section>
 
@@ -155,13 +155,13 @@
                 </ul>
             </nav>
             <div class="socials-wrapper">
-                <img class="social-icon facebook" src="/Assets/Images/icon-facebook.svg" alt="A social icon of facebook">
-                <img class="social-icon instagram" src="/Assets/Images/icon-instagram.svg" alt="A social icon of instagram">
-                <img class="social-icon twitter" src="/Assets/Images/icon-twitter.svg" alt="A social icon of twitter">
-                <img class="social-icon pinterest" src="/Assets/Images/icon-pinterest.svg" alt="A social icon of pinterest">
+                <img class="social-icon facebook" src="Assets/Images/icon-facebook.svg" alt="A social icon of facebook">
+                <img class="social-icon instagram" src="Assets/Images/icon-instagram.svg" alt="A social icon of instagram">
+                <img class="social-icon twitter" src="Assets/Images/icon-twitter.svg" alt="A social icon of twitter">
+                <img class="social-icon pinterest" src="Assets/Images/icon-pinterest.svg" alt="A social icon of pinterest">
             </div>
         </footer>
     </main>
-    <script src="/Assets/Js/main.js"></script>
+    <script src="Assets/Js/main.js"></script>
 </body>
 </html>
