Responsive Design Updates
A change was made in how content was handled for a better and responsive layout. Along with making it easier to edit and adjust anything that is necessary in the future

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 
         <section class="main-content content-1">
             <div class="main-text-wrapper main-text-wrapper-1">
-                <h2 class="second-title">Transform your brand</h2>
-                <p class="second-text">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-                <a href="#" class="learn-more">LEARN MORE</a>
+                <div class="txt-wrapper">
+                    <h2 class="second-title">Transform your brand</h2>
+                    <p class="second-text">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+                    <a href="#" class="learn-more">LEARN MORE</a>
+                </div>
             </div>
             <div class="main-img-wrapper main-img-wrapper-1"></div>
         </section>
@@ -79,23 +81,29 @@
         <section class="main-content content-2">
             <div class="main-img-wrapper main-img-wrapper-2"></div>
             <div class="main-text-wrapper main-text-wrapper-2">
-                <h3 class="third-title">Stand out to the right audience</h3>
-                <p class="third-text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we'll build and extend your brand in digital places</p>
-                <a href="#" class="learn-more-2">LEARN MORE</a>
+                <div class="txt-wrapper-2">
+                    <h3 class="third-title">Stand out to the right audience</h3>
+                    <p class="third-text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we'll build and extend your brand in digital places</p>
+                    <a href="#" class="learn-more-2">LEARN MORE</a>
+                </div>
             </div>
         </section>
 
         <section class="main-content content-3">
             <div class="main-img-wrapper main-img-wrapper-3">
                 <div class="content-wrapper">
+                   <div class="content-txt-wrapper-1">
                     <h4 class="fourth-title">Graphic Design</h4>
                     <p class="fourth-text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention.</p>
+                   </div>
                 </div>
             </div>
             <div class="main-img-wrapper main-img-wrapper-4">
                 <div class="content-wrapper">
-                    <h4 class="fifth-title">Photography</h4>
-                    <p class="fifth-text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+                    <div class="content-txt-wrapper-1">
+                        <h4 class="fifth-title">Photography</h4>
+                        <p class="fifth-text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+                    </div>
                 </div>
             </div>
         </section>
